--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: d2435 <d2435@student.42.fr>                +#+  +:+       +#+         #
+#    By: dmalori <dmalori@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/01/18 09:44:39 by dmalori           #+#    #+#              #
-#    Updated: 2021/02/02 18:52:13 by d2435            ###   ########.fr        #
+#    Updated: 2021/03/14 16:13:32 by dmalori          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -98,7 +98,8 @@ SRCS		= 	ft_memset.c \
 				ft_printf.c \
 				ft_putlchar.c \
 				ft_putlstr.c \
-				ft_toupperstr.c
+				ft_toupperstr.c \
+				ft_strdigit.c
 				
 OBJS		= ${SRCS:.c=.o}
 
